test/resources/typer/failing/ArithError3.scala
object ArithError3 {
  true && ()
}
